# couchquest

./: .dockerignore  .env.example  .gitignore  Dockerfile  Readme.md  config.py  docker-compose.deploy.yml  docker-compose.yml  main.py  pyproject.toml
+app/: app.svelte  index.html
+app/components/: SubHeader.svelte  Tab.svelte  TabGroup.svelte  Toast.svelte
+app/components/form/: Button.svelte  Checkbox.svelte  Select.svelte  TelephoneInput.svelte
+app/shared/: dom.ts  icons.ts  transitions.ts
+migrations/models/: 0_20250304052210_init.py
+node/: package-lock.json  package.json
.github/workflows/: deploy.yml
backend/: .gitignore  Dockerfile  anthropic.py  config.py  config.yml  data.py  database.py  main.py  myapifilms.py  opensubtitles.py  requirements.txt  util.py  youtube.py
backend/api/: auth.py  game.py  media.py  session.py  user.py
backend/api/social_providers/: google.py  openid.py
backend/migrations/models/: 0_20250208224342_init.py  1_20250208225200_update.py
backend/models/: user.py
backend/scripts/: init_db.py
backend/service/: api.py  exceptions.py  static.py
backend/util/: subtitles.py
frontend/: .gitignore  Dockerfile  index.html  package-lock.json  package.json  tailwind.config.cjs  tsconfig.json  tsconfig.node.json  vite.config.ts
frontend/src/: App.svelte  GeneratedResults.svelte  Generator.svelte  ResultMedia.svelte  ResultSelector.svelte  SelectedResult.svelte  app.css
frontend/src/components/: Alert.svelte  Card.svelte  (+6 more)
proxy/: Dockerfile  docker-compose.yml  start.sh
user/: api.py  providers.py  session.py
(+8 files in other folders)
