[project]
name = "couchquest"
version = "0.1.0"
description = "Makes drinking games using subtitles + AI"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "coloco>=0.2.0",
    "configuretron==0.3.0",
    "google-auth==2.38.0",
    "httpx==0.27.2",
    "python-youtube==0.9.7",
    "redis==5.2.1",
    "youtube-transcript-api==0.6.3",
]

[tool.coloco]
app = "main.app"
migrations_dir = "./+migrations"
